--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -17,5 +18,13 @@
   "devDependencies": {
     "nodemon": "^3.1.11"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Jubil1/ITD110_Lab1.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Jubil1/ITD110_Lab1/issues"
+  },
+  "homepage": "https://github.com/Jubil1/ITD110_Lab1#readme",
   "description": ""
 }
